--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
       "prepare": "husky",
       "typeorm": "typeorm-ts-node-commonjs",
       "migration:create": "cross-var npm run typeorm -- migration:create ./src/database/migrations/$npm_config_name",
-      "migration:generate": "cross-var npm run typeorm -- migration:generate ./src/database/migrations/$npm_config_name",
+      "migration:generate": "cross-var npm run typeorm -- -d ./ormconfig.ts migration:generate ./src/database/migrations/$npm_config_name",
       "migration:revert": "npm run typeorm -- migration:revert",
-      "migration:run": "npm run typeorm -- migration:run"
+      "migration:run": "npm run typeorm -- -d ./ormconfig.ts migration:run"
+
    },
    "dependencies": {
       "@nestjs/common": "^10.3.3",
@@ -45,7 +46,6 @@
       "mssql": "^9.1.1",
       "mysql2": "^2.3.3",
       "nestjs-typeorm-paginate": "^4.0.4",
-      "pg": "^8.11.3",
       "reflect-metadata": "^0.1.13",
       "rxjs": "^7.8.1",
       "typeorm": "0.3.20"
